Changed some namespaces and fixed issue with how the pipeline used the factory container adapter

--- a/src/DependencyInversion/App_Config/Include/DependencyInversion/Unicorn.Configs.DependencyInversion.config
+++ b/src/DependencyInversion/App_Config/Include/DependencyInversion/Unicorn.Configs.DependencyInversion.config
@@ -53,6 +53,9 @@
 					  <include name="Layouts" database="master" path="/sitecore/layout/Layouts/DependencyInversion" />
 					  <include name="Renderings" database="master" path="/sitecore/layout/Renderings/DependencyInversion" />
 						<include name="Content" database="master" path="/sitecore/content/Home/DependencyInversion" />
+            <include name="Schedules" database="master" path="/sitecore/system/Tasks/Schedules/DependencyInversion" />
+            <include name="Commands" database="master" path="/sitecore/system/Tasks/Commands/DependencyInversion" />
+            <include name="Template" database="master" path="/sitecore/templates/DependencyInversion" />
 						
 					</predicate>
 					
