--- a/src/DependencyInversion/App_Config/Include/DependencyInversion/Factory.config
+++ b/src/DependencyInversion/App_Config/Include/DependencyInversion/Factory.config
@@ -1,7 +1,7 @@
-﻿﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
+﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
   <sitecore>
     <factories>
-      <factory id="FactoryContainerAdapter" type="DependencyInversion.Factory.FactoryContainerAdapter, DependencyInversion"></factory>
+      <factory id="FactoryContainerAdapter" type="DependencyInversion.CompositionRoot.ContainerAdapters.FactoryContainerAdapter, DependencyInversion"/>
     </factories>
   </sitecore>
 </configuration>
