--- a/src/DependencyInversion/DependencyInversion.csproj
+++ b/src/DependencyInversion/DependencyInversion.csproj
@@ -121,15 +121,16 @@
   <ItemGroup>
     <Compile Include="Adapters\ILogAdapter.cs" />
     <Compile Include="Adapters\SitecoreLogAdapter.cs" />
-    <Compile Include="Commands\CommandTaskContainerAdapter.cs" />
+    <Compile Include="CompositionRoot\ContainerAdapters\CommandTaskContainerAdapter.cs" />
     <Compile Include="Commands\ExampleCommand.cs" />
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="CompositionRoot\Bootstrapper.cs" />
     <Compile Include="CompositionRoot\InitialiseControllerFactory.cs" />
     <Compile Include="CompositionRoot\DependencyInversionControllerFactory.cs" />
     <Compile Include="Controllers\HelloController.cs" />
-    <Compile Include="Factory\FactoryContainerAdapter.cs" />
+    <Compile Include="CompositionRoot\ContainerAdapters\FactoryContainerAdapter.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Pipelines\ExamplePipeline.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Adapters\SitecoreLoggedOnUser.cs" />
     <Compile Include="Adapters\ILoggedOnUser.cs" />
@@ -153,10 +154,18 @@
     <Content Include="App_Config\Include\Unicorn\Unicorn.AutoPublish.config" />
     <Content Include="App_Config\Include\DependencyInversion\Unicorn.Configs.DependencyInversion.config" />
     <Content Include="App_Config\Include\DependencyInversion\Factory.config" />
+    <Content Include="App_Config\Include\DependencyInversion\Pipelines.config" />
     <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <Content Include="Views\Hello\Index.cshtml" />
     <Content Include="Views\_Layout.cshtml" />
+    <Content Include="web.config" />
+    <None Include="web.Debug.config">
+      <DependentUpon>web.config</DependentUpon>
+    </None>
+    <None Include="Web.Release.config">
+      <DependentUpon>web.config</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
