changed namespaces around

--- a/src/DependencyInversion/App_Config/Include/DependencyInversion/Factory.config
+++ b/src/DependencyInversion/App_Config/Include/DependencyInversion/Factory.config
@@ -1,7 +1,7 @@
 ﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
   <sitecore>
     <factories>
-      <factory id="FactoryContainerAdapter" type="DependencyInversion.CompositionRoot.ContainerAdapters.FactoryContainerAdapter, DependencyInversion"/>
+      <factory id="FactoryContainerAdapter" type="DependencyInversion.ContainerAdapters.FactoryContainerAdapter, DependencyInversion"/>
     </factories>
   </sitecore>
 </configuration>
