--- a/src/DependencyInversion/DependencyInversion.csproj
+++ b/src/DependencyInversion/DependencyInversion.csproj
@@ -121,14 +121,14 @@
   <ItemGroup>
     <Compile Include="Adapters\ILogAdapter.cs" />
     <Compile Include="Adapters\SitecoreLogAdapter.cs" />
-    <Compile Include="CompositionRoot\ContainerAdapters\CommandTaskContainerAdapter.cs" />
+    <Compile Include="ContainerAdapters\CommandTaskContainerAdapter.cs" />
     <Compile Include="Commands\ExampleCommand.cs" />
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="CompositionRoot\Bootstrapper.cs" />
     <Compile Include="CompositionRoot\InitialiseControllerFactory.cs" />
-    <Compile Include="CompositionRoot\DependencyInversionControllerFactory.cs" />
+    <Compile Include="ContainerAdapters\ControllerContainerAdapter.cs" />
     <Compile Include="Controllers\HelloController.cs" />
-    <Compile Include="CompositionRoot\ContainerAdapters\FactoryContainerAdapter.cs" />
+    <Compile Include="ContainerAdapters\FactoryContainerAdapter.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Pipelines\ExamplePipeline.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -159,13 +159,6 @@
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <Content Include="Views\Hello\Index.cshtml" />
     <Content Include="Views\_Layout.cshtml" />
-    <Content Include="web.config" />
-    <None Include="web.Debug.config">
-      <DependentUpon>web.config</DependentUpon>
-    </None>
-    <None Include="Web.Release.config">
-      <DependentUpon>web.config</DependentUpon>
-    </None>
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
